# Projeto_engenharia_dados

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
dbt/: README.md
dbt/models/silver/: silver_clientes.sql  silver_preco_competidores.sql  silver_produtos.sql  silver_vendas.sql  silver_vendas_enriquecidas.sql
sql/: README.md  analise_temporal.sql  comparacao_precos_concorrencia.sql  concorrente_mais_barato.sql  produtos_criticos_preco.sql  produtos_maior_receita.sql  produtos_mais_vendidos.sql  receita_por_canal.sql  receita_por_categoria.sql  segmentacao_clientes.sql  top_clientes.sql
src/: config.py  database.py  ler_datalake.py  main.py
