[project]
name = "projeto-stack01"
version = "0.1.0"
description = "Pipeline de engenharia de dados com Python, Supabase, PostgreSQL, SQL e dbt"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.29",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
]

